# functional-python

./: README.md  pyproject.toml
my-project/: pyproject.toml
my-project/src/my_project/: __init__.py  __main__.py
